Updated front-end dependencies

--- a/uasdm-web/src/main/ng2/src/app/core/component/forgotpassword-complete/forgotpassword-complete.component.html
+++ b/uasdm-web/src/main/ng2/src/app/core/component/forgotpassword-complete/forgotpassword-complete.component.html
@@ -24,9 +24,9 @@
               <div class="holder">
                 <span class="text">
                   <input type="password" [(ngModel)]="newPassword" name="password" #password="ngModel" required minlength="5" maxlength="50" >
-                  <ng2-password-strength-bar
+                  <password-strength-bar
                     [passwordToCheck]="newPassword">
-                  </ng2-password-strength-bar>                              
+                  </password-strength-bar>                              
                 </span>
               </div>
               <div class="label-holder">
