--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -16,7 +16,7 @@
                       <h3>UAS Sites</h3>
                     </div>
                     <div class="col-md-6">
-                      <button (click)="handleCreate()" class="btn btn-primary create-site-btn pull-right">Add new site</button>
+                      <button (click)="handleCreate(null,null)" class="btn btn-primary create-site-btn pull-right">Add new site</button>
                       <!-- 
                                                 <button (click)="handleGoto()" class="btn btn-primary create-site-btn pull-right">View map image</button>
                                                 -->
