--- a/uasdm-web/src/main/ng2/src/app/admin/component/account/account.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/account/account.component.html
@@ -1,175 +1,114 @@
 <div *ngIf="account != null" class="modal-body">
-  <div *ngIf="message != null" class="error-container">
-    <div class="label-holder">
-      <strong>Error</strong>
+
+
+  <form #form="ngForm" (ngSubmit)="form.valid && onSubmit()" [mustMatch]="['password', 'certainPassword']">
+    <div>
+      <h3>
+        <localize key="account.user.heading"></localize>
+      </h3>
     </div>
-    <div class="holder">
-      <div>
-        <p class="error-message">{{message}}</p>
+    <hr>
+    <div class="form-group">
+      <label>
+        <localize key="account.user.heading"></localize>
+      </label>
+      <input type="text" [(ngModel)]="account.user.firstName" name="firstname" required>
+    </div>
+    <div class="form-group">
+      <label>
+        <localize key="account.lastname"></localize>
+      </label>
+      <input type="text" [(ngModel)]="account.user.lastName" name="lastname" required>
+    </div>
+    <div class="form-group">
+      <label>
+        <localize key="account.phonenumber"></localize>
+      </label>
+      <input type="text" [(ngModel)]="account.user.phoneNumber" name="phoneNumber" phoneNumber #phoneNumber="ngModel">
+      <div *ngIf="phoneNumber.errors?.phoneNumber" class="inline-error-message">
+        Invalid phone number format
       </div>
     </div>
-  </div>
-  
-  <div *ngIf="newInstance" class="modal-title-container">
-      <h3 >Account</h3>
-  </div>
-  
-  <form #form="ngForm" style="height:calc(100vh - 144px);padding-bottom: 20px;" (ngSubmit)="form.valid && onSubmit()">    
-<!--     <div class="modal-dialog" style="height: 100%;"> -->
-<!--       <div class="modal-content" style="height: 100%;overflow-y: auto;"> -->
-        <fieldset>            
-          <div >
-            <h3><localize key="account.user.heading"></localize></h3>
-          </div>      
-          <hr>        
-          <div class="row-holder">
-            <div class="label-holder">
-              <label><localize key="account.firstname"></localize></label>
-            </div>          
-            <div class="holder" >
-              <span class="text">
-                <input type="text" [(ngModel)]="account.user.firstName" name="firstname" required>
-              </span>
-            </div>
-          </div>          
-          <div class="row-holder">
-            <div class="label-holder">
-              <label><localize key="account.lastname"></localize></label>
-            </div>          
-            <div class="holder" >
-              <span class="text">
-                <input type="text" [(ngModel)]="account.user.lastName" name="lastname" required>
-              </span>
-            </div>
-          </div>  
-          <div class="row-holder">
-            <div class="label-holder">
-              <label><localize key="account.phonenumber"></localize></label>
-            </div>          
-            <div class="holder" >
-              <span class="text">
-                <input type="text" [(ngModel)]="account.user.phoneNumber" name="phoneNumber" >
-              </span>
-<!--               <div *ngIf="aphone.errors?.phone" class="inline-error-message"> -->
-<!--                 <localize key="account.phone.validation"></localize> -->
-<!--               </div>                                           -->
-            </div>
-          </div>           
-          <div class="row-holder">
-            <div class="label-holder">
-              <label><localize key="account.email"></localize></label>
-            </div>          
-            <div class="holder" >
-              <span class="text">
-                <input type="text" [(ngModel)]="account.user.email" name="email" required #aemail="ngModel" email>
-              </span>
-              <div *ngIf="aemail.errors?.email && account.user.email && account.user.email.length > 0" class="inline-error-message">
-                <localize key="account.email.validation"></localize>
-              </div>                                          
-            </div>
-          </div>          
-          <div class="row-holder">
-            <div class="label-holder">
-              <label>Bureau</label>
-            </div>          
-            <div class="holder" >
-              <span class="select">
-                <select [(ngModel)]="account.user.bureau" name="bureau">
-                  <option></option>
-                  <option *ngFor="let option of account.bureaus" [value]="option.value">{{option.label}}</option>
-                </select>
-              </span>
-            </div>
-          </div>          
-          <div >
-            <h3><localize key="account.info.heading"></localize></h3>
-          </div>      
-          <hr>          
-          <div class="row-holder">
-            <div class="label-holder">
-              <label><localize key="account.username"></localize></label>
-            </div>          
-            <div class="holder" >
-              <span class="text">
-                <input type="text" [disabled]="!account.user.newInstance && account.user.username === 'admin'" [(ngModel)]="account.user.username" name="username" required>
-              </span>
-            </div>
-          </div>
-          <div *ngIf="!account.user.newInstance" class="row-holder">
-            <div class="holder" >
-              <boolean-field [(value)]="account.changePassword"></boolean-field>
-            </div>
-            <div class="label-holder">
-              <label><localize key="account.changePassword"></localize></label>
-            </div>          
-          </div>                        
-          <div *ngIf="account.changePassword || account.user.newInstance">
-            <div class="row-holder">
-              <div class="label-holder">
-                <label><localize key="account.password"></localize></label>
-              </div>          
-              <div class="holder" >
-                <span class="text">
-                  <input type="password" [(ngModel)]="account.user.password" name="password" #password="ngModel" required minlength="5" maxlength="50" >
-                  <ng2-password-strength-bar
-                    [passwordToCheck]="account.user.password">
-                  </ng2-password-strength-bar>                              
-                </span>
-              </div>
-            </div>  
-            <div class="row-holder">
-              <div class="label-holder">
-                <label><localize key="account.certainPassword"></localize></label>
-              </div>          
-              <div class="holder" >
-                <span class="text">
-                  <input type="password" ngModel name="certainPassword" #certainPassword="ngModel" [value]="password"/>
-                </span>
-                <div *ngIf="certainPassword.errors?.equalTo" class="inline-error-message">
-                  <localize key="account.certainPassword.validation"></localize>
-                </div>                                                       
-              </div>
-            </div>  
-          </div>
-          <div *ngIf="!(!account.user.newInstance && account.user.username === 'admin')">
-            <div class="row-holder">
-              <div class="holder">
-                <boolean-field [(value)]="account.user.inactive"></boolean-field>
-              </div>
-              <div class="label-holder">
-                <label><localize key="account.inactive"></localize></label>
-              </div>
-            </div>
-          </div>
-          <div *ngFor="let group of account.groups">
-            <div >
-              <h3><localize [key]="'com.runwaysdk.ui.userstable.UsersTable.' + group.name"></localize></h3>
-            </div>                          
-            <hr>
-            <div *ngFor="let role of group.roles" class="row-holder">
-              <div class="holder" >
-                <boolean-field [(value)]="role.assigned"></boolean-field>
-              </div>
-              <div class="label-holder">
-                <label>{{role.displayLabel}}</label>
-              </div>          
-            </div>              
-          </div>
-        </fieldset>
-            <hr>
-        
-          <div class="row-holder">
-            <div class="label-holder">
-            </div>                    
-            <div class="holder">
-              <div class="button-holder">
-                <input type="button" [value]="'dataset.cancel' | localize" class="btn btn-default" (click)="cancel()" />              
-                <input type="submit" [value]="'dataset.submit' | localize" class="btn btn-primary" [disabled]="!(form.valid)" />
-              </div>
-            </div>
-          </div>
-        
-<!--       </div> -->
-<!--     </div> -->
+    <div class="form-group">
+      <label>
+        <localize key="account.email"></localize>
+      </label>
+      <input type="email" [(ngModel)]="account.user.email" name="email" #aemail="ngModel" required email>
+      <div *ngIf="aemail.errors?.email && account.user.email && account.user.email.length > 0" class="inline-error-message">
+        <localize key="account.email.validation"></localize>
+      </div>
+    </div>
+    <div class="form-group">
+      <label>
+        <label>Bureau</label>
+      </label>
+      <select [(ngModel)]="account.user.bureau" name="bureau">
+        <option></option>
+        <option *ngFor="let option of account.bureaus" [value]="option.value">{{option.label}}</option>
+      </select>
+    </div>
+    <div>
+      <h3>
+        <localize key="account.info.heading"></localize>
+      </h3>
+    </div>
+    <hr>
+    <div class="form-group">
+      <label>
+        <localize key="account.username"></localize>
+      </label>
+      <input type="text" [disabled]="!account.user.newInstance && account.user.username === 'admin'" [(ngModel)]="account.user.username" name="username" required>
+    </div>
+    <div *ngIf="!account.user.newInstance" class="form-group">
+      <boolean-field [(value)]="account.changePassword" [label]="'account.changePassword' | localize"></boolean-field>    
+    </div>
+    <div *ngIf="account.changePassword || account.user.newInstance">
+      <div class="form-group">
+        <label>
+          <localize key="account.password"></localize>
+        </label>
+        <input type="password" [(ngModel)]="account.user.password" name="password" #password="ngModel" required minlength="5" maxlength="50">
+        <password-strength-bar [passwordToCheck]="account.user.password"></password-strength-bar>
+      </div>
+      <div class="form-group">
+        <label>
+          <localize key="account.certainPassword"></localize>
+        </label>
+        <input type="password" name="certainPassword" [ngModel]="certainPassword" #certainPassword="ngModel" required />
+        <div *ngIf="certainPassword.errors?.mustMatch" class="inline-error-message">
+          <localize key="account.certainPassword.validation"></localize>
+        </div>
+      </div>
+    </div>
+
+    <div *ngIf="!(!account.user.newInstance && account.user.username === 'admin')" class="form-group">
+      <label>
+        <localize key="account.inactive"></localize>
+      </label>
+      <boolean-field [(value)]="account.user.inactive"></boolean-field>
+    </div>
+
+    <div *ngFor="let group of account.groups">
+      <div>
+        <h3>
+          <localize [key]="'com.runwaysdk.ui.userstable.UsersTable.' + group.name"></localize>
+        </h3>
+      </div>
+      <hr>
+      <div class="form-group">
+        <label>
+          <localize [key]="'com.runwaysdk.ui.userstable.UsersTable.' + group.name"></localize>
+        </label>
+        <div *ngFor="let role of group.roles">
+          <boolean-field [(value)]="role.assigned" [label]="role.displayLabel"></boolean-field>
+        </div>
+      </div>
+    </div>
+    <hr>
+
+    <div class="btn-holder" style="text-align: right;">
+      <input type="button" [value]="'dataset.cancel' | localize" class="btn btn-default" (click)="cancel()" />
+      <input type="submit" [value]="'dataset.submit' | localize" class="btn btn-primary" [disabled]="!(form.valid)" />
+    </div>
   </form>
 </div>
