--- a/uasdm-web/src/main/ng2/src/app/admin/component/logo/system-logos.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/logo/system-logos.component.html
@@ -28,12 +28,12 @@
             <span>
               <a class="fa fa-pencil-alt ico-edit" (click)="edit(icon)" [title]="'system.image.editTooltip' | localize"></a>
               <a *ngIf="icon.custom" class="fa fa-trash-alt ico-remove" [title]="'system.image.removeTooltip' | localize"
-                 (click)="onClickRemove(icon, $event)"></a>
+                 (click)="onClickRemove(icon)"></a>
             </span>
           </td>
           <td class="label-column">{{ icon.label }}</td>
           <td class="icon-thumbnail-column">
-            <img style="width:42px;height:42px;" class="thumb" [src]="context + '/logo/view?id=' + icon.id" alt="Icon">
+            <img style="width:42px;height:42px;" class="thumb" [src]="context + '/logo/view?id=' + icon.oid" alt="Icon">
           </td>
         </tr>      
       </tbody>    
