--- a/uasdm-web/src/main/ng2/src/app/shared/component/boolean-field/boolean-field.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/boolean-field/boolean-field.component.html
@@ -1,8 +1,15 @@
-<div class="check-block">
-  <div (click)="toggle()" [ngClass]="{'chk-checked' : value}" ng-style="chkstyle" class="jcf-unselectable chk-area">
-    <span></span>
+<div>
+  <div class="check-block form-group">
+    <div (click)="toggle()" [ngClass]="{'chk-checked' : value}" ng-style="chkstyle" class="jcf-unselectable chk-area">
+      <span></span>
+    </div>
+
+    <label *ngIf="label.length > 0" class="checkbox-label">{{label}}</label>
+    <label *ngIf="localizeLabelKey.length > 0" class="checkbox-label">
+      <localize key="{{localizeLabelKey}}"></localize>
+    </label>
   </div>
-  
-  <label *ngIf="label.length > 0" class="checkbox-label">{{label}}</label>
-  <label *ngIf="localizeLabelKey.length > 0" class="checkbox-label"><localize key="{{localizeLabelKey}}"></localize></label>
+  <!-- Force a line break somehow -->
+  <div class="row">
+  </div>
 </div>
