--- a/uasdm-web/src/main/ng2/src/app/shared/component/profile/profile.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/profile/profile.component.html
@@ -1,107 +1,72 @@
-<div>
-  <form #form="ngForm" class="modal-form" style="background: none;border: none;" (ngSubmit)="form.valid && onSubmit()">    
-    <div class="modal-dialog" style="background: none;border: none;">
-      <div class="modal-content" style="background: none;border: none;">
-        <fieldset>            
-          <div class="heading">
-            <h3><localize key="profile.heading"></localize></h3>
-          </div>      
-          <hr>        
-          <div class="row-holder">
-            <div class="label-holder">
-              <label><localize key="account.firstname"></localize></label>
-            </div>          
-            <div class="holder" >
-              <span class="text">
-                <input type="text" [(ngModel)]="profile.firstName" name="firstname" required>
-              </span>
-            </div>
-          </div>          
-          <div class="row-holder">
-            <div class="label-holder">
-              <label><localize key="account.lastname"></localize></label>
-            </div>          
-            <div class="holder" >
-              <span class="text">
-                <input type="text" [(ngModel)]="profile.lastName" name="lastname" required>
-              </span>
-            </div>
-          </div>          
-          <div class="row-holder">
-            <div class="label-holder">
-              <label><localize key="account.email"></localize></label>
-            </div>          
-            <div class="holder" >
-              <span class="text">
-                <input type="text" [(ngModel)]="profile.email" name="email" required #aemail="ngModel" email>
-              </span>
-              <div *ngIf="aemail.errors?.email" class="inline-error-message">
-                <localize key="account.email.validation"></localize>
-              </div>                                          
-            </div>
-          </div>          
-          <div class="heading">
-            <h3><localize key="account.info.heading"></localize></h3>
-          </div>      
-          <hr>          
-          <div class="row-holder">
-            <div class="label-holder">
-              <label><localize key="account.username"></localize></label>
-            </div>          
-            <div class="holder" >
-              <span class="text">
-                <input [disabled]="profile.username === 'admin'" type="text" [(ngModel)]="profile.username" name="username" required>
-              </span>
-            </div>
-          </div>
-          <div class="row-holder">
-            <div class="label-holder">
-              <label><localize key="account.changePassword"></localize></label>
-            </div>          
-            <div class="holder" >
-              <boolean-field [(value)]="profile.changePassword"></boolean-field>
-            </div>
-          </div>                        
-          <div *ngIf="profile.changePassword">
-            <div class="row-holder">
-              <div class="label-holder">
-                <label><localize key="account.password"></localize></label>
-              </div>          
-              <div class="holder" >
-                <span class="text">
-                  <input type="password" [(ngModel)]="profile.password" name="password" #password="ngModel" required minlength="5" maxlength="50" >
-                  <ng2-password-strength-bar
-                    [passwordToCheck]="profile.password">
-                  </ng2-password-strength-bar>                              
-                </span>
-              </div>
-            </div>  
-            <div class="row-holder">
-              <div class="label-holder">
-                <label><localize key="account.certainPassword"></localize></label>
-              </div>          
-              <div class="holder" >
-                <span class="text">
-                  <input type="password" ngModel name="certainPassword" #certainPassword="ngModel" [value]="password"/>
-                </span>
-                <div *ngIf="certainPassword.errors?.equalTo" class="inline-error-message">
-                  <localize key="account.certainPassword.validation"></localize>
-                </div>                                                       
-              </div>
-            </div>  
-          </div>
-          <div class="row-holder">
-            <div class="label-holder">
-            </div>                    
-            <div class="holder">
-              <div class="button-holder">
-                <input type="button" [value]="'dataset.cancel' | localize" class="btn btn-default" (click)="cancel()" />              
-                <input type="submit" [value]="'dataset.submit' | localize" class="btn btn-primary" [disabled]="!(form.valid)" />
-              </div>
-            </div>
-          </div>
-        </fieldset>
+<div class="modal-body">
+
+  <form #form="ngForm" (ngSubmit)="form.valid && onSubmit()" [mustMatch]="['password', 'certainPassword']">
+    <div class="heading">
+      <h3>User Profile</h3>
+    </div>
+    <hr>
+    <div class="form-group">
+      <label>
+        <localize key="account.firstname"></localize>
+      </label>
+      <input type="text" [(ngModel)]="profile.firstName" name="firstname" required>
+    </div>
+    <div class="form-group">
+      <label>
+        <localize key="account.lastname"></localize>
+      </label>
+      <input type="text" [(ngModel)]="profile.lastName" name="lastname" required>
+    </div>
+    <div class="form-group">
+      <label>
+        <localize key="account.email"></localize>
+      </label>
+      <input type="email" [(ngModel)]="profile.email" name="email" #aemail="ngModel" required email>
+      <div *ngIf="aemail.errors?.email" class="inline-error-message">
+        <localize key="account.email.validation"></localize>
       </div>
+    </div>
+
+    <div class="heading">
+      <h3>
+        <localize key="account.info.heading"></localize>
+      </h3>
+    </div>
+    <hr>
+
+    <div class="form-group">
+      <label>
+        <localize key="account.username"></localize>
+      </label>
+      <input [disabled]="profile.username === 'admin'" type="text" [(ngModel)]="profile.username" name="username" required>
+    </div>
+
+    <div class="form-group">
+      <boolean-field [(value)]="profile.changePassword" [label]="'account.changePassword' | localize"></boolean-field>
+    </div>
+
+    <div *ngIf="profile.changePassword">
+      <div class="form-group">
+        <label>
+          <localize key="account.password"></localize>
+        </label>
+        <input type="password" [(ngModel)]="profile.password" name="password" #password="ngModel" required minlength="5" maxlength="50">
+        <password-strength-bar [passwordToCheck]="profile.password"></password-strength-bar>
+      </div>
+      <div class="form-group">
+        <label>
+          <localize key="account.certainPassword"></localize>
+        </label>
+        <input type="password" name="certainPassword" [ngModel]="certainPassword" #certainPassword="ngModel" required />
+        <div *ngIf="certainPassword.errors && certainPassword.errors.mustMatch" class="inline-error-message">
+          <localize key="account.certainPassword.validation"></localize>
+        </div>
+      </div>
+    </div>
+
+    <div class="btn-holder" style="text-align: right;">
+      <input type="button" [value]="'dataset.cancel' | localize" class="btn btn-default" (click)="cancel()" />
+      <input type="submit" [value]="'dataset.submit' | localize" class="btn btn-primary" [disabled]="!(form.valid)" />
     </div>
   </form>
 </div>
