--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -72,7 +72,7 @@
               </select>
             </div>
             <div class="col-md-2">
-              <button *ngIf="!page.selection.isNew" type="button btn btn-primary" class="btn btn-primary" (click)="setIsNew(true, $event)">
+              <button *ngIf="!page.selection.isNew" type="button btn btn-primary" class="btn btn-primary" (click)="setIsNew(true)">
                 Add
               </button>
             </div>
@@ -84,7 +84,7 @@
               <input autofocus [(ngModel)]="page.selection.label" name="label" type="input" class="form-control" [placeholder]="page.selection.type + ' name...'" required />
             </div>
             <div class="col-md-2">
-              <button type="button btn btn-primary" class="btn btn-primary" (click)="setIsNew(false, $event)">
+              <button type="button btn btn-primary" class="btn btn-primary" (click)="setIsNew(false)">
                 Cancel
               </button>
             </div>
@@ -223,17 +223,17 @@
               <span class="ui-button-text">Close</span>
             </button>
 
-            <button *ngIf="!existingTask && page.index > 0" type="button btn btn-primary" [disabled]="disabled" class="btn btn-secondary" (click)="handleBackPage($event)">
+            <button *ngIf="!existingTask && page.index > 0" type="button btn btn-primary" [disabled]="disabled" class="btn btn-secondary" (click)="handleBackPage()">
               <i class="icon-upload icon-white"></i>
               Back
             </button>
                             
-            <button *ngIf="!existingTask && page.index < (pages.length - 1)" type="button btn btn-primary" [disabled]="!isPageValid(page) || disabled" class="btn btn-primary" (click)="handleNextPage($event)">
+            <button *ngIf="!existingTask && page.index < (pages.length - 1)" type="button btn btn-primary" [disabled]="!isPageValid(page) || disabled" class="btn btn-primary" (click)="handleNextPage()">
               <i class="icon-upload icon-white"></i>
               Next
             </button>
                             
-            <button *ngIf="page.index === (pages.length - 1)" type="button btn btn-primary" [disabled]="!isPageValid(page) || disabled" class="btn btn-primary" (click)="handleUpload($event)">
+            <button *ngIf="page.index === (pages.length - 1)" type="button btn btn-primary" [disabled]="!isPageValid(page) || disabled" class="btn btn-primary" (click)="handleUpload()">
               <i class="icon-upload icon-white"></i>
               Upload
             </button>
