--- a/uasdm-web/src/main/ng2/src/app/admin/component/account/account.component.html
+++ b/uasdm-web/src/main/ng2/src/app/admin/component/account/account.component.html
@@ -10,7 +10,7 @@
     <hr>
     <div class="form-group">
       <label>
-        <localize key="account.user.heading"></localize>
+        <localize key="account.firstname"></localize>
       </label>
       <input type="text" [(ngModel)]="account.user.firstName" name="firstname" required>
     </div>
@@ -26,7 +26,7 @@
       </label>
       <input type="text" [(ngModel)]="account.user.phoneNumber" name="phoneNumber" phoneNumber #phoneNumber="ngModel">
       <div *ngIf="phoneNumber.errors?.phoneNumber" class="inline-error-message">
-        Invalid phone number format
+        Invalid phone number
       </div>
     </div>
     <div class="form-group">
@@ -96,9 +96,6 @@
       </div>
       <hr>
       <div class="form-group">
-        <label>
-          <localize [key]="'com.runwaysdk.ui.userstable.UsersTable.' + group.name"></localize>
-        </label>
         <div *ngFor="let role of group.roles">
           <boolean-field [(value)]="role.assigned" [label]="role.displayLabel"></boolean-field>
         </div>
