--- a/uasdm-web/src/main/ng2/src/app/shared/component/modal/basic-confirm-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/modal/basic-confirm-modal.component.html
@@ -1,19 +1,11 @@
-<div class="confirm-modal ui-dialog ui-widget ui-widget-content ui-corner-all ui-front ui-draggable ui-resizable com-runwaysdk-ui-factory-jquery-Dialog com-runwaysdk-ui-factory-runway-Widget ui-dialog-buttons" tabindex="-1" role="dialog">
-  <!-- <div class="ui-dialog-titlebar ui-widget-header ui-corner-all ui-helper-clearfix">
-    <span id="ui-id-1" class="ui-dialog-title">Warning</span>
-  </div> -->
-  <div class="confirm-text ui-dialog-content ui-widget-content" style="margin-top:30px;margin-bottom:30px;">
-    {{message}}
+<div>
+  <div class="modal-body" style="margin-top: 30px; margin-bottom: 30px;">
+    <p>{{message}}</p>
   </div>
-    
- <div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix">
-    <div class="ui-dialog-buttonset">
-      <button type="button" (click)="bsModalRef.hide()" class="btn btn-default" role="button" aria-disabled="false" style="padding: 4px 18px;">
-        <span class="ui-button-text">{{cancelText}}</span>
-      </button>
-      <button type="button" (click)="confirm()" [ngClass]="type === 'DANGER' ? 'btn-danger' : 'btn-primary'" class="btn" role="button" aria-disabled="false" style="padding: 4px 18px;">
-        <span class="ui-button-text">{{submitText}}</span>
-      </button>
+  <div class="modal-footer">
+    <div class="btn-holder" style="text-align: right;">
+      <button type="button" (click)="bsModalRef.hide()" class="btn btn-default" role="button" aria-disabled="false" style="padding: 4px 18px;">{{cancelText}}</button>
+      <button type="button" (click)="confirm()" [ngClass]="type === 'DANGER' ? 'btn-danger' : 'btn-primary'" class="btn" role="button" aria-disabled="false" style="padding: 4px 18px;">{{submitText}}</button>
     </div>
   </div>
-</div>  
+</div>
