Set a fixed height of the breadcrumbs on the projects page
Resolves: OU-271

--- a/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/projects.component.html
@@ -25,7 +25,7 @@
                   <!-- IF lower than Site -->
                   <div class="row" *ngIf="current">
                     <div class="col-md-12">
-                      <ul class="breadcrumb" style="background-color: white;">
+                      <ul class="breadcrumb" style="background-color: white; height: 22px">
                         <li>
                           <i class="fa fa-angle-left breadcrumb-back-ico" aria-hidden="true"></i>
                           <a (click)="back(null)" style="color: #007276;">UAS Sites</a>
