https://terraframe.atlassian.net/browse/OU-266

--- a/uasdm-web/src/main/ng2/src/app/shared/component/modal/error-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/shared/component/modal/error-modal.component.html
@@ -1,5 +1,5 @@
 <div class="modal-body error-modal text-center">
-    <form _ngcontent-c4="" class="modal-form">
+    <form class="modal-form">
         <p>{{message}}</p>
 
         <!-- <div class="row"> -->
