--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/upload-modal.component.html
@@ -1,4 +1,5 @@
-<div class="confirm-modal ui-dialog ui-widget ui-widget-content ui-corner-all ui-front ui-draggable ui-resizable com-runwaysdk-ui-factory-jquery-Dialog com-runwaysdk-ui-factory-runway-Widget ui-dialog-buttons" tabindex="-1" role="dialog">
+<div>
+<div class="modal-body" tabindex="-1" role="dialog">
     
 
     <div *ngIf="message != null && message.length > 0" class="row error-container">
@@ -200,12 +201,13 @@
         </div>
         <div class="col-md-2"></div>
     </div>
+    </div>
+      <div class="modal-footer">
     
     <div class="row">
       <div class="col-md-2"></div>
       <div class="col-md-8">
-        <div class="ui-dialog-buttonpane ui-widget-content ui-helper-clearfix" style="padding:0; margin-top:20px;">
-          <div class="ui-dialog-buttonset" >
+        <div class="btn-holder" style="text-align: right;">
             <button type="button" [disabled]="disabled" (click)="close()" [disabled]="disabled" class="btn btn-default" role="button" aria-disabled="false" style="padding: 4px 18px;">
               <span class="ui-button-text">Close</span>
             </button>
@@ -224,9 +226,9 @@
               <i class="icon-upload icon-white"></i>
               Upload
             </button>
-          </div>
         </div>
       </div>                    
+    </div>                    
     </div>                    
     
 </div>
