--- a/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
+++ b/uasdm-web/src/main/ng2/src/app/site/component/modal/leaf-modal.component.html
@@ -30,7 +30,7 @@
 
       <div class="row">
         <tabset class="nav-full-width">
-          <tab *ngFor="let folder of folders" [heading]="folder.name" (select)="onSelect(folder)">
+          <tab *ngFor="let folder of folders" [heading]="folder.name" (selectTab)="onSelect(folder)">
             <div id="image-list-container">
 
               <ul class="list-group row">
@@ -41,8 +41,9 @@
 	                    <input type="checkbox" class="x-box" *ngIf="enableSelectableImages"
 	                      [checked]="item.excludeFromProcess" (change)="toggleExcludeImage($event, item)" />
 	                    <img (click)="enableSelectableImages ? toggleExcludeImage($event, item) : false"
-	                      [ngClass]="{'img-disabled' : item.excludeFromProcess}" [src]="thumbnails[item.key] | safeHtml"
-	                      (error)="getDefaultImgURL($event)" alt="Image">
+	                      [ngClass]="{'img-disabled' : item.excludeFromProcess}"
+                          [src]="thumbnails[item.key] != null ? (thumbnails[item.key] | safeHtml) : defaultImage()"
+                          alt="Image">
 	                    <div class="caption">
 	                      <h4 class="media-heading">{{item.name}}</h4>
 	                    </div>
@@ -57,8 +58,9 @@
 	                    <input type="checkbox" class="x-box" *ngIf="enableSelectableImages"
 	                      [checked]="item.excludeFromProcess" (change)="toggleExcludeImage($event, item)" />
 	                    <img (click)="enableSelectableImages ? toggleExcludeImage($event, item) : false"
-	                      [ngClass]="{'img-disabled' : item.excludeFromProcess}" [src]="thumbnails[item.key] | safeHtml"
-	                      (error)="getDefaultImgURL($event)" alt="Image">
+	                      [ngClass]="{'img-disabled' : item.excludeFromProcess}" 
+                          [src]="thumbnails[item.key] != null ? (thumbnails[item.key] | safeHtml) : defaultImage()"
+	                      alt="Image">
 	                    <div class="caption">
 	                      <h4 class="media-heading">{{item.name}}</h4>
 	                    </div>
